<resources>
    <string name="app_name">ParkBark</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sfpark">Draw Parking</string>
    <string name="action_navigation">navigation</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">ParkBark</string>
    <string name="title_section2">Parking History</string>
    <string name="title_section3">SF Parking Information</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="current_location">Current Location</string>
    <string name="textAlarm">Alarm</string>
    <string name="textNotification">Notification</string>
    <string name="textClearHistory">Clear History</string>
</resources>
