<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.team2.csc413.parkbark.Settings">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="8dp">


            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:id="@+id/frameAlarm">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/textAlarm"
                        android:id="@+id/textView"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Reminder to move car before parking expires"
                        android:id="@+id/textView9"
                        android:layout_gravity="left"
                        android:layout_marginLeft="20dp" />

                </LinearLayout>

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/toggleAlarm"
                    android:onClick="onToggleClicked"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical|right"
                    android:enabled="true" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:id="@+id/frameNotification"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/textNotification"
                        android:id="@+id/textView2"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:autoText="false" />

                    <TextView
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Methods by which to be notified"
                        android:id="@+id/textView10"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="20dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bark"
                        android:id="@+id/checkBark"
                        android:onClick="onCheckboxClicked"
                        android:enabled="true"
                        android:layout_gravity="center_vertical" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vibrate"
                        android:id="@+id/checkVibrate"
                        android:onClick="onCheckboxClicked"
                        android:enabled="true"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/frameWalk">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Walk Back To Car"
                        android:id="@+id/textTimer"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:autoText="false" />

                    <TextView
                        android:layout_width="149dp"
                        android:layout_height="43dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Estimate addition time for walking to car"
                        android:id="@+id/textView12"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/toggleWalk"
                    android:layout_gravity="right|center_vertical"
                    android:onClick="onToggleClicked"
                    android:layout_marginRight="15dp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:id="@+id/frameClearHistory">

                <Button
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:id="@+id/clear"
                    android:onClick="onButtonClicked"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="16dp"
                    android:background="@android:drawable/ic_menu_delete" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/textClearHistory"
                        android:id="@+id/textView3"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="159dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Clear all saved parking spots from database"
                        android:id="@+id/textView11"
                        android:layout_marginLeft="20dp" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
